--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,16 @@
                 <h1>Projects.</h1>
                 <div>
                     <br />
+                    <h5><a href="projects/thea.html">Generating Artificial Training Data</a></h5>
+                    <p><i>8th August 2021</i></p>
+                    <p>
+                        This was a project in end to end machine learning system design. Specifically, I design and build
+                        a machine learning backed camera trap image analysis and management product. This post is an
+                        overview of the design & implementation, plus a product demonstration.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5><a href="projects/artificial.html">Generating Artificial Training Data</a></h5>
                     <p><i>17th July 2018</i></p>
                     <p>
