--- a/projects/artificial.html
+++ b/projects/artificial.html
@@ -299,7 +299,7 @@
                 <div id="disqus_thread"></div>
                 <script>
                     var disqus_config = function () {
-                    this.page.url = "https://www.harrysprojects.com/blogs/artificial.html";
+                    this.page.url = "https://www.harrysprojects.com/projects/artificial.html";
                     this.page.identifier = "artificial";
                     };
 
