--- a/projects/carcontrol.html
+++ b/projects/carcontrol.html
@@ -271,7 +271,7 @@
                 <div id="disqus_thread"></div>
                 <script>
                     var disqus_config = function () {
-                    this.page.url = "https://www.harrysprojects.com/blogs/carcontrol.html";
+                    this.page.url = "https://www.harrysprojects.com/projects/carcontrol.html";
                     this.page.identifier = "carcontrol";
                     };
 
