--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 <h1>Projects.</h1>
                 <div>
                     <br />
-                    <h5><a href="projects/thea.html">Generating Artificial Training Data</a></h5>
+                    <h5><a href="projects/thea.html">Thea - An ML Camera Trap Image Analysis Tool</a></h5>
                     <p><i>8th August 2021</i></p>
                     <p>
                         This was a project in end to end machine learning system design. Specifically, I design and build
