Added bgp project.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
                 <ul>
                     <li>
                         <p>
+                            <a href="https://www.harrysprojects.com/projects/thea.html">Detecting the Facebook Outage with PyBGPStream</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
                             <a href="https://www.harrysprojects.com/projects/thea.html">Thea - An ML Camera Trap Image Analysis Tool</a>
                         </p>
                     </li>
