--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,15 @@
                 <h1>Projects.</h1>
                 <div>
                     <br />
+                    <h5><a href="projects/thea.html">Detecting the Facebook Outage with PyBGPStream</a></h5>
+                    <p><i>10th December 2021</i></p>
+                    <p>
+                        This short project demonstrates how we can use open source tools to investigate internet
+                        connectivity incidents such as the Facebook outage on October 4th. It also introduces BGP.
+                    </p>
+                </div>
+                <div>
+                    <br />
                     <h5><a href="projects/thea.html">Thea - An ML Camera Trap Image Analysis Tool</a></h5>
                     <p><i>8th August 2021</i></p>
                     <p>
