--- a/projects/bgp_measurements.html
+++ b/projects/bgp_measurements.html
@@ -14,6 +14,15 @@
         <link rel=“canonical” href=“https://www.harrysprojects.com/projects/artificial.html” />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/Navbar.js" type="text/javascript" defer></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-180754451-1');
+        </script>
     </head>
     <body>
         <div class="page-container">
@@ -26,8 +35,8 @@
                 <h3>Introduction</h3>
                 <p>
                     At 15:51 UTC on Monday 4th October 2021, major DNS resolvers around the world started
-                    returning (and caching) SERVFAIL for queries to facebook.com because they couldn't resolve
-                    facebook's name servers. Since facebook.com couldn't be resolved, users everywhere lost access
+                    returning (and caching) SERVFAIL for queries to <b>facebook.com</b> because they couldn't resolve
+                    Facebook's name servers. Since <b>facebook.com</b> couldn't be resolved, users everywhere lost access
                     to the app, the website, whatsapp, and many other services. Facebook was effectively disconnected
                     from the internet.
                 </p>
@@ -35,18 +44,18 @@
                     The root cause of the outage was a misconfiguration, but to the public internet it manifested as
                     a BGP issue. BGP is a relatively unknown, yet incredibly important internet protocol that connects
                     everything together, and I thought it would make an interesting article to try and detect the
-                    facebook outage, and demonstrate just how easy it is to do.
+                    Facebook outage, and demonstrate just how easy it is to do.
                 </p>
                 <p>
-                    In this short project I introduce BGP and DNS, the two main internet technologies at the heart of
-                    the incident. I explain what happened during the facebook outage, and finally demonstrate how to
-                    detect the outage with PyBGPStream.
+                    In this post I introduce BGP and DNS, the two main internet technologies at the heart of
+                    the incident. I explain what happened during the Facebook outage, and finally demonstrate how to
+                    detect the outage with <a href="https://bgpstream.caida.org/docs/tutorials/pybgpstream">PyBGPStream</a>.
                 </p>
                 <h3>The Border Gateway Protocol (or BGP)</h3>
                 <p>
-                    Most people have heard of the Internet Protocol (IP), and mostly understand
-                    how every public host that is connected to the internet has a unique IP address. They also understand
-                    that for two hosts to communicate over the network, they must send packets to each other tagged
+                    Most people have heard of the Internet Protocol (IP), and understand
+                    that every public host that is connected to the internet has a unique IP address. They also understand
+                    that for two hosts to communicate over the network, they must send packets to each other identified
                     with those addresses, much like how you might send a letter to a friend via the postal service.
                     Whereas a postman delivering a letter is quite easy to get your head around, it's not so obvious how
                     a packet bound for a particular host on the other side of the internet actually gets there.
@@ -60,10 +69,10 @@
                 <p>
                     The internet is a network of networks, and each of these networks is referred to as an
                     Autonomous System. An Autonomous System (or AS) is a single administrative domain. That means that
-                    one organisation is in charge of the network, they can buy and install routers wherever they want
-                    (assuming they own the land of course), they can connect them up however they like, and store the
+                    one organisation is in charge of the network, they can buy and install routers wherever they want,
+                    they can connect them up however they like, and store the
                     routing tables of their choice. Within a single AS, the routers will coordinate with each other
-                    and learn how to send messages to other routers in the AS. For example, if one router is connected
+                    and learn how to send messages to other routers in the AS. In the example below, if one router is connected
                     to host A, and another router is connected to host B, then host A only needs
                     to send a packet to its local router which then sends the packet to B's router via some path it
                     has previously learned, which finally forwards it on to B. The routers in this example are simply
@@ -124,23 +133,23 @@
                     This type of BGP advertisement is called an announcement, another type is called a withdrawal
                     which says, "I am no longer advertising this route", which removes the address from all the
                     routing tables in that Autonomous System. By advertising and withdrawing routes, Autonomous Systems
-                    can advertise and control what addresses are public on the internet.
+                    can control what addresses are public on the internet.
                 </p>
                 <p>
                     Facebook has it's own AS (actually it has several), which is <b>AS 32934</b>. The reason
-                    facebook have their own AS is for the same reason that Netflix, and Google have their own
+                    Facebook have their own AS is for the same reason that Netflix, and Google have their own
                     Autonomous Systems, administrative control over the network so that they can prioritise traffic
-                    for their own services. Facebook's AS is purely for facebook traffic. When you go to facebook.com,
-                    the traffic is routed to the nearest facebook network entry point (a small data center) which routes
-                    you onto the facebook network, from there your traffic flows over a high capacity network backbone
-                    via a series of routers to facebook's datacenters where the request is actually fulfilled.
+                    for their own services. Facebook's AS is purely for Facebook traffic. When you go to <b>facebook.com</b>,
+                    the traffic is routed to the nearest Facebook network entry point (a small data center) which routes
+                    you onto the Facebook network, from there your traffic flows over a high capacity network backbone
+                    via a series of routers to Facebook's datacenters where the request is actually fulfilled.
                 </p>
                 <h3>Domain Name System</h3>
                 <p>
                     The Domain Name System, or DNS, is like the internet's address book. It saves human beings from
-                    remembering addresses like 20.0.0.1, meaning you only need to remember facebook.com instead. DNS servers map
+                    remembering addresses like 20.0.0.1, meaning you only need to remember <b>facebook.com</b> instead. DNS servers map
                     hostnames to addresses, and will refer to a more authoritative DNS server if they haven't got an entry in their local database. Facebook has it's own DNS server
-                    specifically for anything at facebook.com. For example, consider the following two hostnames.
+                    specifically for anything at <b>facebook.com</b>. For example, consider the following two hostnames.
                 </p>
                 <ul>
                     <li>
@@ -151,11 +160,11 @@
                     </li>
                 </ul>
                 <p>
-                    When you visit ai.facebook.com, your local machine first contacts the local DNS server
-                    in your area. Assuming that ai.facebook.com isn't already cached, that DNS server recursively
+                    When you visit <b>ai.facebook.com</b>, your local machine first contacts the local DNS server
+                    in your area. Assuming that <b>ai.facebook.com</b> isn't already cached, that DNS server recursively
                     queries the root <b>.com</b> DNS server which looks it up. The <b>.com</b> DNS server doesn't have an entry
                     for <b>ai.facebook.com</b> but it does have an entry for a <b>facebook.com</b> DNS server, so it refers the
-                    local DNS to facebook instead. The local DNS server then queries facebook's DNS server for
+                    local DNS to Facebook's DNS instead. The local DNS server then queries Facebook's DNS server for
                     <b>ai.facebook.com</b>, this time there's a match! It looks up the address and returns it to the
                     local DNS server, which returns it to your local machine. Notice how you machine doesn't really
                     know (or care) what's happening, it all happens automatically. DNS is said to be hierarchical, and
@@ -169,9 +178,9 @@
                 </div>
                 <p>
                     Facebook's DNS server (actually it has several) contains IP addresses for everything at
-                    <b>facebook.com</b>, it's located within facebook's Autonomous System and it has it's own IP address
+                    <b>facebook.com</b>, it's located within Facebook's Autonomous System and it has it's own IP address
                     just like everything else. The <b>.com</b> DNS
-                    server knows that IP address, and the correct routes have been advertised from facebook's AS
+                    server knows that IP address, and the correct routes have been advertised from Facebook's AS
                     using BGP. So when your laptop asks for something at <b>facebook.com</b>, all the routers know
                     how to route your request to the right place.
                 </p>
@@ -180,7 +189,7 @@
                     Now that we've got the background, what actually happened? A misconfigration happened.
                 </p>
                 <p>
-                    Recall that facebook have their own AS, which contains their backbone network, and their
+                    Recall that Facebook have their own AS, which contains their backbone network, and their
                     datacenters. When you run a network the size of facebook's, it needs occasional maintenance.
                     Someone carried out a routine maintenance task on the backbone network and accidentally took
                     down all the connections which disconnected the datacenters from the public internet. Oops.
@@ -203,7 +212,7 @@
                     advertisements as well, disconnecting themselves from the internet in the process!
                 </p>
                 <p>
-                    With facebook's DNS servers unreachable, the <b>.com</b> DNS server, and all the local ones, were
+                    With Facebook's DNS servers unreachable, the <b>.com</b> DNS server, and all the local ones, were
                     all trying to query hostnames like <b>ai.facebook.com</b> and even just <b>facebook.com</b> and
                     all were receiving SERVFAIL in response.
                 </p>
@@ -213,12 +222,13 @@
                     Facebook's AS throughout the event.
                 </p>
                 <p>
+                    There are special "listener" servers throughout the world that simply listen to, and capture BGP
+                    advertisements, and store them all in a big database.
                     <a href="https://bgpstream.caida.org/docs/tutorials/pybgpstream">PyBGPStream</a> is a library that
-                    lets you playback BGP advertisements received by special "listener" servers around the world, who's
-                    job it is to just listen and capture BGP advertisements and store them in a big database.
-                    You can filter for whatever time period you are interested in. If you don't specify any filters, you can play
-                    back typical BGP traffic. Although it doesn't capture everything, it gives you a flavour of
-                    what's happening around the internet.
+                    lets you playback BGP advertisements from this database for whatever period you want, whenever you
+                    want, just as if you were receiving these advertisements in real time. If you don't specify any
+                    filters, it will play back all BGP traffic. Although it doesn't capture everything, it gives you
+                    a flavour of what's happening around the internet.
                 </p>
                 <p>
                     <pre>
@@ -230,13 +240,13 @@
                     </pre>
                 </p>
                 <p>
-                    I setup a stream and recorded from 15:00 on the 4th October to 22:00 that same evening which
+                    The above code sets up a stream and records from 15:00 on the 4th October to 22:00 that same evening which
                     encompasses the whole event. This is a post-event excercise, but it would be trivial to make this run
                     in an online manner and make detections in real time.
                 </p>
                 <p>
                     For the record type I specify 'updates' which filters out any administrative messages. Finally,
-                    I specify a 'peer 32934' filter. If you recall, that's facebook's AS, so this tells the stream
+                    I specify a 'peer 32934' filter. If you recall, that's Facebook's AS, so this tells the stream
                     to only show advertisements that are coming directly from facebook, otherwise we'd be seeing
                     all advertisements from all over the web!
                 </p>
@@ -261,6 +271,10 @@
                     15:00 to 22:00. To do this I simply push the time that the advertisement occured into a list
                     and then bucket them with a histogram. The offset is simply so that the histogram axes start at 0.
                 </p>
+                <p>
+                    Using the above method I produced the following histograms which show the number of withdrawals
+                    and advertisements issued in each two minute period from 15:00 to 22:00.
+                </p>
                 <div class="image-container">
                     <img src="../images/projects/bgp_measurements/withdrawals.png"/>
                     <p><i>BGP Withdrawals</i></p>
@@ -271,13 +285,13 @@
                 </div>
                 <p>
                     What you can see from the histrogram of withdrawals is a significant spike right at 15:42 which is
-                    when the trouble began. Then nothing for an hour or two whilst facebook scramble their engineers,
-                    then a series of announcements and withdrawals as the systems vacillate and attempt to come back
+                    when the trouble began. Then nothing for an hour or two whilst Facebook scramble their engineers,
+                    then a series of announcements and withdrawals as the systems attempt to come back
                     online, and finally a big flurry of activity at about 22:00 as all systems return to normal.
                 </p>
                 <h3>Conclusion</h3>
                 <p>
-                    Incidents like this highlight how neither the internet, not Facebook, are bullet proof. Things do
+                    Incidents like this highlight how neither the internet, nor Facebook, are bullet-proof. Things do
                     go wrong, and they can sometimes go wrong in interesting and illuminating ways. As individuals with
                     no access to Facebook's networks (unless you're a Facebook engineer of course), we don't just have to
                     sit on the sidelines and wait for the incident report to come out. What I hoped to show in this
@@ -289,8 +303,8 @@
                 <div id="disqus_thread"></div>
                 <script>
                     var disqus_config = function () {
-                    this.page.url = "https://www.harrysprojects.com/projects/garage_door.html";
-                    this.page.identifier = "garage_door";
+                    this.page.url = "https://www.harrysprojects.com/projects/bgp_measurements.html";
+                    this.page.identifier = "bgp_measurements";
                     };
 
                     (function() { // DON'T EDIT BELOW THIS LINE
