Updated broken links.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <ul>
                     <li>
                         <p>
-                            <a href="https://www.harrysprojects.com/projects/thea.html">Detecting the Facebook Outage with PyBGPStream</a>
+                            <a href="https://www.harrysprojects.com/projects/bgp_measurements.html">Detecting the Facebook Outage with PyBGPStream</a>
                         </p>
                     </li>
                     <li>
