--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
                 <h1>Projects.</h1>
                 <div>
                     <br />
-                    <h5><a href="projects/thea.html">Detecting the Facebook Outage with PyBGPStream</a></h5>
+                    <h5><a href="projects/bgp_measurements.html">Detecting the Facebook Outage with PyBGPStream</a></h5>
                     <p><i>10th December 2021</i></p>
                     <p>
                         This short project demonstrates how we can use open source tools to investigate internet
