Removed books, updated about.

--- a/about.html
+++ b/about.html
@@ -32,35 +32,22 @@
             <div>
                 <h1>About Me.</h1>
                 <p>
-                    Hi, I'm Harry, I'm a machine learning engineer at work, and
-                    a tinkerer at home. I'll do any project that looks like fun or if I think
-                    there's something to be learned from it. I also read a lot. The tech world can be exhausting,
-                    so to relax I get out into nature as much as I can, either on my gravel bike
-                    (who needs roads), or under the water in the UK coasts and quarries.
+                    Hi, I'm Harry. I'm the tech lead for the ML Platform team at <a href="https://vaarst.com/">Vaarst</a>,
+                    and have oversight of the architecture, system design, and development processes of the team.
+                    We're building an ML enabled data platform in the cloud to allow our customers to intelligently manage,
+                    analyse, and deliver geo-referenced offshore data to their own customers.
                 </p>
-                <div class="image-container">
-                    <img src="images/about/lands-end.jpg"/>
-                </div>
                 <p>
-                    I work at <a href="https://www.rovco.com/">Rovco</a>, a rapidly growing tech company in the
-                    off-shore renewables industry. Essentially an ROV (Remotely Operated Vehicle) and hydrographic
-                    survey company, but with a very strong R&D arm in 3D, AI, and autonomous robotics.
-                    I get to work on real problems in computer vision and robotics,
-                    where my work has a positive impact on the planet (95% of our business is in offshore wind).
+                    This isn't a website about that, however. I work on personal projects in my spare time and read
+                    things that interest me, mostly around Machine Learning and System Design. My passion is designing
+                    and building systems with ML at their core, and it's what I'm focussing my career around.
                 </p>
-                <div class="image-container">
-                    <img src="images/about/rov.jpeg"/>
-                </div>
                 <p>
-                    This website isn't just a blog, it's a journal, a living document that I'll revisit and rewrite again
-                    and again. It's somewhere I can keep all my thoughts and ideas, somewhere to keep track of my
-                    progress, somewhere to reflect and write down things I've learned along the way. Although I'm doing it for me, I'm making it public in case anything here is of
-                    use to somebody else.
+                    This blog is a place to capture thoughts and ideas relating to that goal, somewhere to keep track
+                    of progress, to reflect and write things down that I've learned along the way. Although I'm
+                    doing it for me, I'm making it public in case anything here is of use to somebody else.
                 </p>
-                <div class="image-container">
-                    <img src="images/about/shepards.jpg"/>
-                    <p><i>Who said bike touring can't be done in style?</i></p>
-                </div>
+
                 <br />
                 <br />
             </div>
