--- a/books.html
+++ b/books.html
@@ -35,6 +35,15 @@
                     Notes to myself on books I've read (since I started keeping track).
                 </p>
                 <br />
+                <h3>2022</h3>
+                <div>
+                    <br />
+                    <h5>The Road Less Travelled</h5>
+                    <p><i>Scott Peck</i></p>
+                    <p>
+
+                    </p>
+                </div>
                 <h3>2021</h3>
                 <div>
                     <br />
