--- a/projects/bgp_measurements.html
+++ b/projects/bgp_measurements.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="utf-8">
         <title>Detecting the Facebook Outage with PyBGPStream</title>
-        <meta name="description" content="">
+        <meta name="description" content="In this project I explain BGP and DNS, and show how to detect the Facebook
+         Outage using PyBGPStream.">
         <meta name="author" content="Harry Turner">
-        <meta name="keywords" content="">
+        <meta name="keywords" content="BGP, DNS, PyBGPStream, Facebook Outage, Autonomous System">
         <link rel="icon" type="image/ico" href="../images/favicon.ico">
         <link href="../styles/styles.css" type="text/css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
