Refactor and reorganisation.

--- a/machine_learning.html
+++ b/machine_learning.html
@@ -32,12 +32,8 @@
             <div>
                 <h1>Machine Learning.</h1>
                 <br />
+                <br />
                 <h3>Paper Reviews</h3>
-                <p>
-                    Some papers I want to try and understand particularly well, or will have reason to come
-                    back to in the future. In this case, as part of my effort of understanding and remembering them,
-                    I write an article introducing and explaining it. This section is for those articles.
-                </p>
                 <ul>
                     <ul>
                         <li><p><a href="articles/efficientnetx.html">Searching for Fast Model Families on Datacenter Accelerators</a></p></li>
@@ -86,10 +82,29 @@
                         <li><p><a href="articles/objectal.html">Introduction to Active Learning for Object Detection at Vaarst</a></p></li>
                         <li><p><a href="articles/uncertaintysampling.html">Uncertainty Sampling Techniques</a></p></li>
                         <li><p><a href="articles/diversitysampling.html">Diversity Sampling Techniques</a></p></li>
+                        <li><p><a href="projects/artificial.html">Generating Artificial Training Data</a></p></li>
                     </ul>
                 </ul>
                 <br />
                 <br />
+                <h3>Projects</h3>
+                <div>
+                    <br />
+                    <p><a href="projects/networklibrary.html">Building a Neural Network Library from Scratch</a></p>
+                    <p><i>30th April 2018</i></p>
+                    <p>
+                        I demonstrate how I built a neural network library from scratch, using only numpy.
+                    </p>
+                </div>
+                <div>
+                    <br />
+                    <p><a href="projects/carcontrol.html">Small Neural Network for Car Control</a></p>
+                    <p><i>13th September 2017</i></p>
+                    <p>
+                        In this project, I use genetic algorithms to train a small neural network to control a virtual
+                        car around a track.
+                    </p>
+                </div>
             </div>
 
         </div>
