--- a/system.html
+++ b/system.html
@@ -31,10 +31,14 @@
             <nav-bar></nav-bar>
 
             <div>
-                <h1>Projects.</h1>
+                <h1>System Design.</h1>
+                <br />
+                <br />
+
+                <h3>Projects.</h3>
                 <div>
                     <br />
-                    <h5><a href="projects/bgp_measurements.html">Detecting the Facebook Outage with PyBGPStream</a></h5>
+                    <p><a href="projects/bgp_measurements.html">Detecting the Facebook Outage with PyBGPStream</a></p>
                     <p><i>10th December 2021</i></p>
                     <p>
                         This short project demonstrates how we can use open source tools to investigate internet
@@ -43,7 +47,7 @@
                 </div>
                 <div>
                     <br />
-                    <h5><a href="projects/thea.html">Thea - An ML Camera Trap Image Analysis Tool</a></h5>
+                    <p><a href="projects/thea.html">Thea - An ML Camera Trap Image Analysis Tool</a></p>
                     <p><i>8th August 2021</i></p>
                     <p>
                         This was a project in end to end machine learning system design. Specifically, I design and build
@@ -51,32 +55,7 @@
                         overview of the design & implementation, plus a product demonstration.
                     </p>
                 </div>
-                <div>
-                    <br />
-                    <h5><a href="projects/artificial.html">Generating Artificial Training Data</a></h5>
-                    <p><i>17th July 2018</i></p>
-                    <p>
-                        I write an algorithm to generate artificial training images, and then train an image classifier
-                        to classify real images with an accuracy of 98%.
-                    </p>
-                </div>
-                <div>
-                    <br />
-                    <h5><a href="projects/networklibrary.html">Building a Neural Network Library from Scratch</a></h5>
-                    <p><i>30th April 2018</i></p>
-                    <p>
-                        I demonstrate how I built a neural network library from scratch, using only numpy.
-                    </p>
-                </div>
-                <div>
-                    <br />
-                    <h5><a href="projects/carcontrol.html">Small Neural Network for Car Control</a></h5>
-                    <p><i>13th September 2017</i></p>
-                    <p>
-                        In this project, I use genetic algorithms to train a small neural network to control a virtual
-                        car around a track.
-                    </p>
-                </div>
+
                 <br />
                 <br />
             </div>
