--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Harrys Projects</title>
         <meta name="description" content="Harry's Personal Website.">
         <meta name="author" content="Harry Turner">
-        <meta name="keywords" content="harry, projects, harrys projects, harry's projects, website, blog, henry">
+        <meta name="keywords" content="harry, projects, harrys projects, harry's projects, website, blog, henry,
+        system design, ml, machine learning">
 
         <link rel="icon" type="image/ico" href="images/favicon.ico">
         <link href="styles/styles.css" type="text/css" rel="stylesheet" />
@@ -34,15 +35,29 @@
                 <div>
                     <img src="images/logo.png" alt="harry turner logo"/>
                     <h1>Harry Turner</h1>
-                    <h3>Books, projects, and things I've learned.</h3>
+                    <h3>Thoughts on ML System Design</h3>
                 </div>
             </div>
 
             <div>
-                <h1>Home.</h1>
+                <h1>Hi, I'm Harry.</h1>
                 <p>
-                    Welcome to my website, a place where I keep a record of projects I've done, reviews of books I've read,
-                    machine learning topics I've studied, and thoughts and ideas I've had.
+                    I'm the tech lead for the ML Platform team at <a href="https://vaarst.com/">Vaarst</a>.
+                    We're building an ML enabled data platform in the cloud to allow our customers to intelligently manage,
+                    analyse, and deliver geo-referenced offshore data to their own customers.
+                </p>
+                <p>
+                    This isn't a website about that, however.
+                </p>
+                <p>
+                    I work on personal projects in my spare time and read
+                    things that interest me, mostly around Machine Learning and System Design. My passion is designing
+                    and building systems with AI and ML at their core, and it's what I'm focussing my career around.
+                </p>
+                <p>
+                    This blog is a place to capture thoughts and ideas relating to that goal, somewhere to keep track
+                    of progress, to reflect and write things down that I've learned along the way. Although I'm
+                    doing it for me, I'm making it public in case anything here is of use to somebody else.
                 </p>
                 <h3>Latest Articles</h3>
                 <ul>
