Added python_project article.

--- a/system_design.html
+++ b/system_design.html
@@ -34,6 +34,13 @@
                 <h1>System Design.</h1>
                 <br />
                 <br />
+                <h3>For Reference</h3>
+                <ul>
+                    <ul>
+                        <li><p><a href="articles/pythonproject.html">Standard Python Project Setup</a></p></li>
+                    </ul>
+                </ul>
+                <br />
 
                 <h3>Projects.</h3>
                 <div>
