Added python project to home page.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                 <ul>
                     <li>
                         <p>
+                            <a href="https://www.harrysprojects.com/articles/pythonproject.html">Standard Python Project Setup</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
                             <a href="https://www.harrysprojects.com/projects/bgp_measurements.html">Detecting the Facebook Outage with PyBGPStream</a>
                         </p>
                     </li>
