Added wordle solver project.

--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,15 @@
                 <h1>Thoughts and Ideas.</h1>
                 <div>
                     <br />
+                    <h5><a href="projects/wordle.html">Python Wordle Solver</a></h5>
+                    <p><i>30th January 2022</i></p>
+                    <p>
+                        A walk through and demonstration of a pure Python implementation of a Wordle solver.
+                    </p>
+                    <p><i>8 minute read.</i></p>
+                </div>
+                <div>
+                    <br />
                     <h5><a href="blogs/burningout.html">On Not Burning Out</a></h5>
                     <p><i>20th January 2021</i></p>
                     <p>
