--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
                 <ul>
                     <li>
                         <p>
+                            <a href="https://www.harrysprojects.com/projects/wordle.html">Python Wordle Solver</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
                             <a href="https://www.harrysprojects.com/articles/pythonproject.html">Standard Python Project Setup</a>
                         </p>
                     </li>
