--- a/projects/wordle.html
+++ b/projects/wordle.html
@@ -14,7 +14,7 @@
         <link rel=“canonical” href=“https://www.harrysprojects.com/projects/artificial.html” />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/Navbar.js" type="text/javascript" defer></script>
-        <!-- Global site tag (gtag.js) - Google Analytics-->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180754451-1"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
@@ -130,15 +130,15 @@
                     matches. Matches are important because they narrow down the search space of possibilities.
                 </p>
                 <p>
-                    (Note that not only are some letters are more common than others, but are likely to appear in
+                    (Note that not only are some letters more common than others, but are likely to appear in
                     certain positions, so the position of the letters matters as well.)
                 </p>
                 <p>
                     What all of this means, is that some words, like 'wryly' will not narrow the set
                     of possible words very much. On occasion, you may get lucky and hit 'y' and 'w' which considerably
                     reduces the set of possible words, but most of the time you won't. On the other hand the word
-                    'raise' will, on average, produce more matches than 'wryly' and allow
-                    you to rapidly narrow down the space of possibilities.
+                    'raise' will, on average, produce more matches than 'wryly' and therefore reduce the size of the
+                    set of possible words.
                 </p>
                 <p>
                     We can therefore derive a notion of the value of a word as <b><i>the average size of the reduced word list
