Added blog post - build something.

--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,17 @@
                 <h1>Thoughts and Ideas.</h1>
                 <div>
                     <br />
+                    <h5><a href="blogs/buildsomething.html">Build Something You Can't Live Without</a></h5>
+                    <p><i>3rd December 2022</i></p>
+                    <p>
+                        If you build something that <i>you</i> love, something that solves a
+                        problem that <i>you</i> have, there's a good chance it solves somebody
+                        else's problem as well.
+                    </p>
+                    <p><i>3 minute read.</i></p>
+                </div>
+                <div>
+                    <br />
                     <h5><a href="projects/wordle.html">Python Wordle Solver</a></h5>
                     <p><i>30th January 2022</i></p>
                     <p>
