--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                 <ul>
                     <li>
                         <p>
+                            <a
+                                    href="https://www.harrysprojects.com/blogs/buildsomething.html">Build Something You Can't Live Without</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p>
                             <a href="https://www.harrysprojects.com/projects/wordle.html">Python Wordle Solver</a>
                         </p>
                     </li>
