Added CV to website.

--- a/blogs/buildsomething.html
+++ b/blogs/buildsomething.html
@@ -46,14 +46,15 @@
                     Consider the space of all possible problems, almost all of them are problems
                     that people won't care about. This is the domain of well-designed products
                     that never make it to market, apps with no downloads, and unread blog posts.
-                    But there exists a small subset of problems that people do care about.
+                    But there exists a small subset of problems that people do care about. If
+                    you're going to build a useful product, then it needs to lie in this subset.
                 </p>
                 <div class="image-container">
                     <img src="../images/blogs/buildsomething/space_of_problems.png"/>
                     <p><i>The space of problems.</i></p>
                 </div>
                 <p>
-                    Just because you're in the zone of problems that people care about, it
+                    Just because you're in the subset of problems that people care about, it
                     doesn't guarantee that <i>everyone</i> will care about it. If you're unlucky,
                     it might just be you that has that problem. But in my experience, if it's a
                     problem that at least one person cares about, there's a good chance that
@@ -68,7 +69,8 @@
                 </a>), and you have to be skilled at eliciting the
                     essence of those problems if you're going to solve them. But when you solve
                     your own problems, you are your own user, you are constantly getting cheap
-                    and honest user feedback.
+                    and honest user feedback. This means that the chance of you getting the
+                    product right is much higher.
                 </p>
                 <p>
                     What if you don't have a problem? The main limitation of this technique is
