Updated CV link to be viewable.

--- a/blogs/themostimportantthing.html
+++ b/blogs/themostimportantthing.html
@@ -27,56 +27,65 @@
                 <p><i>16th December 2022</i></p>
 
                 <p>
-                    Turning thirty is one of those milestones that, for some reason, is dreaded
-                    by a lot of people. As if it's some sort of sacred threshold that means
-                    that you're not young anymore -  you better have your life figured out by
+                    Turning thirty is one of those milestones that make a lot of people
+                    nervous. Like it's some sort of sacred threshold that says
+                    you're not young anymore -  you better have your life figured out by
                     now and be well on your way to success and fulfillment! As if...
                 </p>
                 <p>
-                    I turn thirty in a few weeks and, right on cue, have begun to wonder
-                    about what I've done with my life so far... and what I want to do with it
+                    I turn thirty in a few weeks, right on cue, I have begun to think
+                    about what I've done with my life... and what I want to do with it
                     next. In this post I want to focus on just one of the thoughts I've had,
                     possibly the biggest one, the sobering knowledge that I have a finite
                     amount of time left, and that there is an opportunity cost to everything I
-                    do. I promise the rest of this post won't be as depressing.
+                    do. It's a depressing thought, but bear with me, this post
+                    turns out to be positive, I promise.
                 </p>
                 <p>
-                    When you're younger, you think you have all the time in the
+                    When I was younger, I thought I had all the time in the
                     world, but as I've gotten older, I have become acutely aware of time
-                    passing. Therefore, if I want to make the best use of my time, then
-                    it means that at any particular moment, I should try and make sure I'm
-                    doing the most important thing.
+                    passing. I realised that if I want to make the best use of my time, then
+                    it means that at any particular moment, I must make sure that I'm doing
+                    the most important thing. Anything else is a waste.
                 </p>
-
                 <p>
                     This is not a post about figuring out what that most important thing is,
                     that's a very difficult thing to do and I don't have an answer to it.
-                    Instead, this
-                    is a post about efficiency, about simply being aware of where I'm spending my
-                    time, because I've noticed that if I don't pay attention to it, I
-                    waste a lot of it.
+                    Instead, this is a post about efficiency, about simply being aware of where
+                    I'm spending my time, because I've noticed that if I don't pay attention to
+                    it, I waste it.
                 </p>
+
                 <h3>Introducing 'Balance'</h3>
                 <p>
-                    I'm an engineer, so of course I had to start by making a spreadsheet, which I
-                    have nicknamed 'Balance'. It's a method for tracking where I spend my time
-                    with the aim of
-                    questioning whether it's time well spent. I first define a set of values,
-                    things that are important to me, like 'building and creating things',
+                    I'm an engineer by training, so naturally I had to start by making a
+                    spreadsheet, which I have nicknamed 'Balance'. It's a method for tracking
+                    where I spend my time with the aim of helping me question whether it's
+                    time well spent.
+                </p>
+                <p>
+                    I first define a set of values, which are
+                    things that are important to me, like `building and creating things`,
                     'physical health', 'family' etc. Then I 'log' activities that
                     contribute to those values. The spreadsheet tracks how much I've
                     contributed to each of my values and begins to weight more heavily those
                     things that seem to be getting neglected.
                 </p>
                 <p>
+                    Example spreadsheet.
+                </p>
+                <p>
                     This is not about meticuluously tracking everything I do, life is too
-                    messy for that. I don't agonise over whether a trip to the pub with a
+                    messy for that. For the record, I don't agonise over whether a trip to the
+                    pub with a
                     friend counts as 2 or 3 points towards being social, or whether reading
                     that book improved my mental well being, or broadened my horizons etc. The
                     point of the exercise is that it allows me to express in fairly general
                     terms that this set of values is important to me, and to capture, also in
-                    general terms, how where I spend my time relates to those values. What
-                    has ended up happening is that the spreadsheet is beginning
+                    general terms, how where I spend my time relates to those values.
+                </p>
+                <p>
+                    What has ended up happening is that the spreadsheet is beginning
                     to reveal things about what I said was important vs what I actually end up
                     doing.
                 </p>
