--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
                 <h1>Curriculum Vitae.</h1>
                 <p>
                     <a
-                            href="https://drive.google.com/file/d/1fSTXNI_GaiqMZUp8HBUSdsfEYnk7hNaZ/view">Download my CV here</a>.
+                            href="https://drive.google.com/file/d/1fSTXNI_GaiqMZUp8HBUSdsfEYnk7hNaZ/view?usp=share_link">Download my CV here</a>.
                 </p>
 
                 <h3>Detailed Experience</h3>
